# horse-notify

./: .gitignore  checking_entry.py  driver_init.py  find_horse.py  find_race.py  line.json  line.py  main.py  messaging_utils.py  pyproject.toml  scraping_utils.py  spreadsheet.py
.github/workflows/: dev.yaml  main.yaml  test.yaml
tests/: test_main.py
